--- a/static/chatroom.css
+++ b/static/chatroom.css
@@ -1,46 +1,51 @@
+.room-info {
+    float:left;
+    margin-right:32px;
+}
+
 
 .video-grid
 {  
-    display: grid;
+    /* display: grid;
     grid-auto-flow: dense; 
     grid-template-columns: auto auto; 
     gap: 1rem;    
     padding: 0.5rem;
-    margin: 0.8rem;
-}
+    margin: 0.8rem; */
 
-.video-grid:empty{
-    display: block;
-    text-align: center; 
-    color: rgb(156, 153, 146);       
-    font-size: x-large;
-    height: 360px;
+    display:inline-block;
+    
 }
-.video-grid:empty::before{
-    content: "No one else is connected!";
-}
-
 .video-item {
-    
-    background-color: #FEFFFF;
+    /* background-color: #FEFFFF; */
+    position:relative;
     text-align: center;
-    padding: 5px;
-    
+    /* padding: 5px;  */
 }
 .vid-wrapper
 {
-    background-color: rgb(22, 25, 27);
+    display:inline-block;
+    background-color: white;
     padding: 0;
+    width:160px; height:120px; overflow:hidden;
+    margin:20px;
+    /* -webkit-transform: scaleX(-1);
+    transform: scaleX(-1); */
 }
 .vid-wrapper video{
-    max-width: 45vw;
-    max-height: 40vh;        
+    width:160px; height:120px;
+    /* -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);   */
 }
 .display-name{
-    color: #17252A;
+    position:absolute;
+    top:20px; left:20px;
+    background:rgba(100,100,100,0.4);
+    color: white;
     font-family:sans-serif;
-    font-size: 18px;
-    padding: 2px;
+    font-size: 14px;
+    font-weight:500;
+    padding: 2px 8px;
 }
 
 #control_box{
@@ -52,17 +57,32 @@
     padding: 0.25rem;
 }
 #local_vid{       
-    max-height: 140px;
+    /* max-height: 140px; */
     object-fit: contain;
+    /* -webkit-transform: scaleX(-1);
+    transform: scaleX(-1); */
 } 
 
-@media only screen and (max-width: 768px) {
-    /* For mobile phones: */
-    .video-grid {
-        grid-template-columns: 1fr;
-    }
-    #control_box .btn-lg{
-        padding: 5px 12px 5px 12px;
-    }
-    
+canvas { 
+    width:320px; height:240px;
 }
+
+#div_composite_video button{
+    margin:20px; 
+    border:none;
+}
+
+canvas#composite_vid {
+    display:block;
+    margin:20px;
+    background:#111;
+}
+
+#composition_setting {
+    height: 400px;
+    width: 400px;
+    font-size: 10px;
+    background: transparent;
+    margin: 0 20px;
+}
+    
