--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -23,11 +23,14 @@
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
     <link rel="stylesheet" href="{{url_for('static', filename='chatroom.css')}}">
     
+<!-- TensorflowJS -->
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2"></script>
+<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/body-pix@2.0"></script>
 
     <script type="text/javascript"> 
         var myRoomID = "{{room_id}}"; 
         var myName = "{{display_name}}"; 
-        var audioMuted = "{{mute_audio}}"=="1";
+        var audioMuted = "{{mute_audio}}"=="0";
         var videoMuted = "{{mute_video}}"=="1";
         console.log(">> {{mute_audio}}, {{mute_video}}", audioMuted, videoMuted);
     </script>
@@ -41,42 +44,48 @@
 <body>
     
     <div class="heading mb-4">
-        <h1 class="display-4">Video Chat</h1>
         <div class="room-info">
-            <h3>Room: <span class="heading-mark">{{room_id}}</span></h3>
-            <h5>You have joined as <span class="heading-mark">{{display_name}}</span></h5>
-            <div>Ask your friends to join using the room id: <span class="heading-mark">{{room_id}}</span></div>
-            <div id="room_link"></div>
+            <h4>Video Chat</h4>
+            Room: {{room_id}}, Nick Name: {{display_name}} Room id: {{room_id}}
         </div>
+        <div class="controls">
+            <button id="bttn_mute" class="btn btn-lg btn-outline-secondary rounded-circle">
+                <span id="mute_icon" class="material-icons pt-2">
+                    mic
+                </span>
+            </button>
+            <button id="bttn_vid_mute"class="btn btn-lg btn-outline-secondary rounded-circle">
+                <span id="vid_mute_icon" class="material-icons pt-2">
+                    videocam
+                </span>
+            </button>
+            <button id="call_end" class="btn btn-lg btn-danger rounded-circle">
+                <span class="material-icons pt-2">
+                    call_end
+                </span>
+            </button>
+            <!-- <button id="btn_blur" onclick="loadBodyPix()">Remove Background</button> -->
+        </div>
+
+
     </div>
         
     <div class="container-fluid px-0 mx-0">
-        <div id="video_grid" class="video-grid"></div>
-
-        <div id="control_box" class="row control-box shadow">
-            <div class="col-7 col-md-8 col-lg-9 d-flex justify-content-around align-items-center button-box">
+        <div id="div_local_vid">
+            <div class="vid-wrapper">
+                <video id="local_vid" width="320" height="240" autoplay muted></video>
+                <canvas id="local_vid_canvas" width="320" height="240" ></canvas>
+            </div>
+            <div id="video_grid" class="video-grid"></div>
+        </div>
+        <div id="div_composite_video">
+            <button id="start_scene" class="btn btn-info" onclick="toggle_video_composition()">Start Video Composition</button>
+            <canvas id="composite_vid" width="320" height="240"></canvas>
+        </div>
+        <div class="div_composition_setting">
+            <textarea id="composition_setting">
                 
-                <button id="bttn_mute" class="btn btn-lg btn-outline-secondary rounded-circle">
-                    <span id="mute_icon" class="material-icons pt-2">
-                        mic
-                    </span>
-                </button>
-                <button id="bttn_vid_mute"class="btn btn-lg btn-outline-secondary rounded-circle">
-                    <span id="vid_mute_icon" class="material-icons pt-2">
-                        videocam
-                    </span>
-                </button>
-                <button id="call_end" class="btn btn-lg btn-danger rounded-circle">
-                    <span class="material-icons pt-2">
-                        call_end
-                    </span>
-                </button>
-            </div>
-            <div id="div_local_vid" class="col-5 col-md-4 col-lg-3 video-item ml-auto">
-                <div class="vid-wrapper">
-                    <video id="local_vid" autoplay muted></video>
-                </div>
-            </div>
+            </textarea>
         </div>
     </div>    
 </body>
