before merging with SeungHo's code

--- a/static/chatroom.css
+++ b/static/chatroom.css
@@ -1,17 +1,57 @@
+body {
+    display:flex;
+    flex-direction:column;
+}
+
 .hidden {
     display:none;
 }
+.heading {
+    flex:0 1 auto;
+    display:flex;
+    flex-direction: row;
+}
 .room-info {
-    float:left;
+    flex: 0 1 auto;
+    display:inline-block;
     margin-right:32px;
+}
+.controls {
+    flex: 1 0 auto;
+    
+}
+
+.heading {
+    flex:0 1 auto;
+}
+.main {
+    flex:1 0 auto;
+    display:flex;
+    flex-direction:row;
 }
 
 .div_webcam_selector {
-    margin:20px 0 0 20px;
+    flex:0 0 320px;
+    width:320px;
+    height:100%;
+    padding:10px;
     font-size:13px;
+    border-right:1px solid #aaa;
+    
+    display:flex;
+    flex-direction:column;
 }
+
+#div_composite_video {
+    flex:1 0 auto;
+    width:auto;
+    padding:10px;
+}
+
+
+
 .div_webcam_selector select {
-    width:150px;
+    width:100%;
 }
 .video-grid
 {  
@@ -34,11 +74,11 @@
 .vid-wrapper
 {
     position:relative;
-    display:inline-block;
+    display:block;
     background-color: white;
     padding: 0;
-    width:160px; height:120px; overflow:hidden;
-    margin:20px;
+    width:200px; height:150px; overflow:hidden;
+    margin:14px auto;
     /* -webkit-transform: scaleX(-1);
     transform: scaleX(-1); */
 }
@@ -49,7 +89,8 @@
     font-size:14px; font-weight:500;
 }
 .vid-wrapper video{
-    width:160px; height:120px;
+    width:200px; height:150px;
+    border:1px solid #eee;
     /* -webkit-transform: scaleX(-1);
     transform: scaleX(-1);   */
 }
@@ -83,6 +124,7 @@ canvas {
     width:320px; height:240px;
 }
 
+
 #div_composite_video button{
     margin:20px; 
     border:none;
@@ -92,13 +134,22 @@ canvas#composite_vid {
     display:block;
     margin:20px;
     background:#111;
+    width:640px;
+    height:480px;
 }
 
+.div_composition_setting {
+    flex:1 0 auto;
+}
+.composition_controls button {
+    margin: 0 8px 8px 0;
+}
 #composition_setting {
-    height: 400px;
-    width: 400px;
+    height: 100%;
+    min-height:200px;
+    width: 100%;
     font-size: 10px;
-    background: transparent;
-    margin: 0 20px;
+    border: 1px solid #ccc;
+
 }
     
