--- a/static/style.css
+++ b/static/style.css
@@ -1,12 +1,16 @@
+html {
+    height:100%;
+}
 body{
-    background-color: rgb(223, 219, 209);
+    background-color: white;
+    height:100%;
 }
 .heading
 {
     margin: 0;
     padding: 1rem 1rem 1rem 2rem;
-    background-color: rgb(49, 46, 42);
-    color: rgb(255, 207, 149);
+    background-color: rgb(224, 224, 224);
+    color: #222;
 }
 .heading-mark{
     color: rgb(255, 244, 230);
