--- a/templates/home.html
+++ b/templates/home.html
@@ -18,15 +18,15 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Chat</title>
+    <title>Virfie</title>
 </head>
 <body>
 
     <div class="heading mb-4">
-        <h1 class="display-4">Video Chat</h1>
+        <h1 class="display-4">Virfie</h1>
     </div>
     <div class="container text-center mt-5">
-        <h4>Welcome to video chat!</h4>
+        <h4>Welcome to Virfie!</h4>
         <p>
             Enter a custom room name, and click join! <br> 
             Share the room name with your friends, so that they can join too!
