--- a/templates/chatroom_checkpoint.html
+++ b/templates/chatroom_checkpoint.html
@@ -26,12 +26,12 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Chat [{{room_id}}]</title>
+    <title>Virfie [{{room_id}}]</title>
 </head>
 <body>
 
     <div class="heading mb-4">
-        <h1 class="display-4">Video Chat</h1>        
+        <h1 class="display-4">Virfie</h1>        
         <h4>You are about to join room: <span class="heading-mark">{{room_id}}</span></h4>
     </div>
 
