--- a/static/chatroom.css
+++ b/static/chatroom.css
@@ -1,155 +1,260 @@
-body {
-    display:flex;
-    flex-direction:column;
+@keyframes expand {
+  from {
+    transform: scale(0);
+    opacity: 0;
+    background: #5470B0;
+  }
 }
-
+body {
+  display: flex;
+  flex-direction: column;
+}
 .hidden {
-    display:none;
+  display: none;
 }
 .heading {
-    flex:0 1 auto;
-    display:flex;
-    flex-direction: row;
+  flex: 0 1 auto;
+  display: flex;
+  flex-direction: row;
 }
 .room-info {
-    flex: 0 1 auto;
-    display:inline-block;
-    margin-right:32px;
+  flex: 0 1 auto;
+  display: inline-block;
+  margin-right: 32px;
 }
 .controls {
-    flex: 1 0 auto;
-    
+  flex: 1 0 auto;
+  margin-top: 20px;
 }
-
 .heading {
-    flex:0 1 auto;
+  flex: 0 1 auto;
 }
 .main {
-    flex:1 0 auto;
-    display:flex;
-    flex-direction:row;
+  flex: 1 0 auto;
+  display: flex;
+  flex-direction: row;
 }
-
 .div_webcam_selector {
-    flex:0 0 320px;
-    width:320px;
-    height:100%;
-    padding:10px;
-    font-size:13px;
-    border-right:1px solid #aaa;
-    
-    display:flex;
-    flex-direction:column;
+  flex: 0 0 320px;
+  width: 320px;
+  height: 100%;
+  padding: 20px;
+  font-size: 13px;
+  border-right: 1px solid #aaa;
+  display: flex;
+  flex-direction: column;
 }
-
 #div_composite_video {
-    flex:1 0 auto;
-    width:auto;
-    padding:10px;
+  flex: 1 0;
+  box-sizing: content-box;
+  padding: 10px;
 }
-
-
-
 .div_webcam_selector select {
-    width:100%;
+  width: 100%;
 }
-.video-grid
-{  
-    /* display: grid;
-    grid-auto-flow: dense; 
-    grid-template-columns: auto auto; 
-    gap: 1rem;    
-    padding: 0.5rem;
-    margin: 0.8rem; */
-
-    display:inline-block;
-    
-}
-.video-item {
-    /* background-color: #FEFFFF; */
-    position:relative;
-    text-align: center;
-    /* padding: 5px;  */
-}
-.vid-wrapper
-{
-    position:relative;
-    display:block;
-    background-color: white;
-    padding: 0;
-    width:200px; height:150px; overflow:hidden;
-    margin:14px auto;
-    /* -webkit-transform: scaleX(-1);
+.vid-wrapper {
+  position: relative;
+  display: block;
+  background-color: white;
+  padding: 0;
+  margin: 8px auto;
+  /* -webkit-transform: scaleX(-1);
     transform: scaleX(-1); */
 }
 .vid-wrapper .overlay_message {
-    position:absolute;
-    top:40%; left:12px;
-    color:black;
-    font-size:14px; font-weight:500;
+  position: absolute;
+  top: 40%;
+  /* left: 12px; */
+  color: black;
+  font-size: 14px;
+  font-weight: 500;
+  width: 100%;
+  text-align: center;
 }
-.vid-wrapper video{
-    width:200px; height:150px;
-    border:1px solid #eee;
-    /* -webkit-transform: scaleX(-1);
-    transform: scaleX(-1);   */
+.vid-wrapper #local_vid {
+  /* max-height: 140px; */
+  width: 100%;
+  height: auto;
+  /* -webkit-transform: scaleX(-1);
+        transform: scaleX(-1); */
 }
-.display-name{
-    position:absolute;
-    top:20px; left:20px;
-    background:rgba(100,100,100,0.4);
-    color: white;
-    font-family:sans-serif;
-    font-size: 14px;
-    font-weight:500;
-    padding: 2px 8px;
+.vid-wrapper video {
+  border: 1px solid #eee;
+  width: 100%;
+  height: auto;
+  /* -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);   */
 }
-
-#control_box{
-    background-color: rgb(255, 255, 255);
-    height: 180px;
-    width: 100%;
-    margin: 1rem 0px 0px 0px;
-
-    padding: 0.25rem;
+.vid-wrapper #local_vid_canvas {
+  display: none;
 }
-#local_vid{       
-    /* max-height: 140px; */
-    object-fit: contain;
-    /* -webkit-transform: scaleX(-1);
-    transform: scaleX(-1); */
-} 
-
-canvas { 
-    width:320px; height:240px;
+.vid-wrapper .video-grid {
+  /* display: grid;
+        grid-auto-flow: dense; 
+        grid-template-columns: auto auto; 
+        gap: 1rem;    
+        padding: 0.5rem;
+        margin: 0.8rem; */
+  display: inline-block;
 }
-
-
-#div_composite_video button{
-    margin:20px; 
-    border:none;
+.vid-wrapper .video-item {
+  /* background-color: #FEFFFF; */
+  position: relative;
+  text-align: center;
+  /* padding: 5px;  */
 }
-
-canvas#composite_vid {
-    display:block;
-    margin:20px;
-    background:#111;
-    width:640px;
-    height:480px;
+.display-name {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background: rgba(100, 100, 100, 0.4);
+  color: white;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 2px 8px;
 }
-
+#control_box {
+  background-color: #ffffff;
+  height: 180px;
+  width: 100%;
+  margin: 1rem 0px 0px 0px;
+  padding: 0.25rem;
+}
+canvas {
+  width: 800px;
+  height: 600px;
+}
+#composite_vid_wrapper {
+  position: relative;
+  width: 800px;
+  height: 600px;
+  margin: 10px;
+  box-sizing: border-box;
+}
+#composite_vid_wrapper canvas#composite_vid {
+  display: block;
+  background: #111;
+  width: 800px;
+  height: 600px;
+}
+#composite_vid_wrapper button#snapshot {
+  position: absolute;
+  bottom: 8px;
+  left: 10px;
+  border: none;
+  background: rgba(0, 0, 0, 0.2);
+  width: 50px;
+  height: 50px;
+  user-select: none;
+  border-radius: 12px;
+}
+#composite_vid_wrapper button#snapshot svg {
+  width: 30px;
+  transform: scale(1.5);
+  margin: 6px 6px 5px 5px;
+}
+#composite_vid_wrapper button#snapshot:focus {
+  outline: 0;
+}
+#composite_vid_wrapper button#fullscreen {
+  position: absolute;
+  bottom: 8px;
+  right: 10px;
+  border: none;
+  background: rgba(0, 0, 0, 0.2);
+  width: 50px;
+  height: 50px;
+  user-select: none;
+  border-radius: 12px;
+}
+#composite_vid_wrapper button#fullscreen svg {
+  width: 30px;
+  transform: scale(1.5);
+  margin: 6px 6px 5px 5px;
+}
+#composite_vid_wrapper button#fullscreen:focus {
+  outline: 0;
+}
+#composite_vid_wrapper.fullscreen {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+#composite_vid_wrapper.fullscreen canvas#composite_vid {
+  display: block;
+  background: #111;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+#snapshot_list label {
+  font-size: 15px;
+  margin: 10px 20px;
+  color: black;
+  font-weight: 600;
+}
+#snapshot_list a {
+  color: #aaa;
+  font-size: 15px;
+  margin-left: 20px;
+}
+#snapshot_list a:hover {
+  color: blue;
+}
+#snapshot_list ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+#snapshot_list li {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+  width: 140px;
+  animation: expand 0.5s ease-in-out;
+  background: #eee;
+  border-radius: 7px;
+}
+#snapshot_list li img {
+  width: 100%;
+}
+#snapshot_list li button#btn_snapshot {
+  display: block;
+  border: none;
+  width: 100%;
+  height: 100%;
+  background: #aaa;
+}
 .div_composition_setting {
-    flex:1 0 auto;
+  flex: 1 0 auto;
 }
-.composition_controls button {
-    margin: 0 8px 8px 0;
+.div_composition_setting select#select_scenario {
+  margin: 5px 0 10px 0;
 }
-#composition_setting {
-    height: 100%;
-    min-height:200px;
-    width: 100%;
-    font-size: 10px;
-    border: 1px solid #ccc;
-
+.div_composition_setting button#start_scene {
+  margin: 8px 0;
+  width: 100%;
+  font-size: 16px;
 }
-    
+.div_composition_setting .composition_controls {
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+.div_composition_setting button {
+  margin: 0px;
+  font-size: 1em;
+  flex-grow: 1;
+}
+.div_composition_setting #composition_editor {
+  height: 100%;
+  min-height: 200px;
+  width: 100%;
+  font-size: 10px;
+  border: 1px solid #ccc;
+}
