--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -21,6 +21,9 @@
     <!-- lodash -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
 
+    <!-- GLFX library for image distortion WebGL -->
+    <script src="{{url_for('static', filename='/glfx.js')}}"></script>
+
     <!-- google Material icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
    
@@ -39,6 +42,15 @@
         var videoMuted = "{{mute_video}}"=="1";
         console.log(">> {{mute_audio}}, {{mute_video}}", audioMuted, videoMuted);
     </script>
+    <script type="text/javascript">
+        let scenarios = {};
+        let filters = {};
+    </script>
+    
+    <script src="{{url_for('static', filename='/scenarios/space_wiggle.js')}}"></script>
+    <script src="{{url_for('static', filename='/scenarios/emotion_tracker.js')}}"></script>
+    <script src="{{url_for('static', filename='/scenarios/club_virfie.js')}}"></script>
+
     <script src="{{url_for('static', filename='chatroom_ui.js')}}"></script>
     <script src="{{url_for('static', filename='chatroom_networking.js')}}"></script>
     <script src="{{url_for('static', filename='chatroom_scene_control.js')}}"></script>
@@ -56,8 +68,6 @@
         </div>
         <div class="controls">
             <button id="call_end" class="btn btn-warning">Exit Room</button>
-            <button id="start_scene" class="btn btn-info" onclick="toggle_video_composition()">Start Video Composition</button>
-            
         </div>
     </div>
     <div class="main">
@@ -68,23 +78,52 @@
             <div id="div_local_vid">
                 <div class="vid-wrapper">
                     <label class="overlay_message">Choose camera first</label>
-                    <video id="local_vid" width="640" height="480" autoplay muted></video>
-                    <canvas id="local_vid_canvas" width="640" height="480" ></canvas>
+                    <video id="local_vid" width="800" height="600" autoplay muted></video>
+                    <canvas id="local_vid_canvas"></canvas>
                 </div>
                 <div id="video_grid" class="video-grid"></div>
             </div>
             <div class="div_composition_setting">
+                <select name="scenario" id="select_scenario">
+                    <option value="" disabled>Select a Scenario</option>
+                    <option value="space_wiggle" selected>Space Wiggle</option>
+                    <option value="emotion_tracker">Emotion Tracker</option>
+                    <option value="club_virfie">Club Virfie</option>
+                </select>
+                <button id="start_scene" class="btn btn-info" onclick="toggle_video_composition()">Start Video Composition</button>
                 <div class="composition_controls">
                     <button class="btn btn-outline-secondary btn-sm" id="revert">Revert</button>
                     <button class="btn btn-outline-secondary btn-sm" id="share">Share</button>
                     <button class="btn btn-outline-secondary btn-sm" id="prevScene">&larr; Prev</button>
                     <button class="btn btn-outline-secondary btn-sm" id="nextScene">&rarr; Next</button>
                 </div>
-                <textarea id="composition_setting"></textarea>
+                <textarea id="composition_editor"></textarea>
             </div>
         </div>    
         <div id="div_composite_video">
-            <canvas id="composite_vid"></canvas>
+            <div id="composite_vid_wrapper">
+                <canvas id="composite_vid" width="800" height="600"></canvas>
+                <button id="snapshot" onclick="take_snapshot()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-camera" viewBox="0 0 16 16">
+                    <path d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"/>
+                    <path d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"/>
+                    </svg>
+                </button>
+                <button id="fullscreen" onclick="toggle_fullscreen()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#fff" class="bi bi-fullscreen" viewBox="0 0 16 16">
+                        <path d="M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1h-4zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5zM.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5z"/>
+                    </svg>
+                </button>
+
+            </div>
+            <div id="snapshot_list">
+                <!-- <label>Snapshots</label> 
+                <a onclick="download_snapshots()">
+                    Download All
+                </a> -->
+                <ul>
+                </ul>
+            </div>
         </div>
         
     </div>
