--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -21,7 +21,7 @@
     <!-- lodash -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
 
-    <!-- GLFX library for image distortion WebGL -->
+    <!-- GLFX library for image distortion WebGL (https://evanw.github.io/glfx.js/docs/) -->
     <script src="{{url_for('static', filename='/glfx.js')}}"></script>
 
     <!-- google Material icons -->
