--- a/static/chatroom.less
+++ b/static/chatroom.less
@@ -236,12 +236,17 @@ canvas {
         display: inline-block;
         margin: 10px;
         padding: 10px;
-        width: 140px;
+        width: 160px;
+        height: 120px;
         animation: expand 0.5s ease-in-out;
         background: #eee;
         border-radius: 7px;
         img {
             width:100%; 
+        }
+        canvas {
+            width:100%;
+            height:100%;
         }
         button#btn_snapshot {
             display:block;
