sync users composition in the same room

--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -98,6 +98,7 @@
                     <button class="btn btn-outline-secondary btn-sm" id="nextScene">&rarr; Next</button>
                 </div>
                 <textarea id="composition_editor"></textarea>
+                <button id="start_scene" class="btn btn-info" onclick="updateConmposition()">Update Video Composition</button>
             </div>
         </div>    
         <div id="div_composite_video">
