--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -92,8 +92,8 @@
                 </select>
                 <button id="start_scene" class="btn btn-info" onclick="toggle_video_composition()">Start Video Composition</button>
                 <div class="composition_controls">
-                    <button class="btn btn-outline-secondary btn-sm" id="revert">Revert</button>
-                    <button class="btn btn-outline-secondary btn-sm" id="share">Share</button>
+                    <!-- <button class="btn btn-outline-secondary btn-sm" id="revert">Revert</button>
+                    <button class="btn btn-outline-secondary btn-sm" id="share">Share</button> -->
                     <button class="btn btn-outline-secondary btn-sm" id="prevScene">&larr; Prev</button>
                     <button class="btn btn-outline-secondary btn-sm" id="nextScene">&rarr; Next</button>
                 </div>
