--- a/static/chatroom.css
+++ b/static/chatroom.css
@@ -214,14 +214,14 @@ canvas {
   display: inline-block;
   margin: 10px;
   padding: 10px;
-  width: 160px;
+  vertical-align: middle;
   height: 120px;
   animation: expand 0.5s ease-in-out;
   background: #eee;
   border-radius: 7px;
 }
 #snapshot_list li img {
-  width: 100%;
+  height: 100%;
 }
 #snapshot_list li canvas {
   width: 100%;
@@ -236,14 +236,18 @@ canvas {
 }
 .div_composition_setting {
   flex: 1 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 .div_composition_setting select#select_scenario {
   margin: 5px 0 10px 0;
+  flex: 0 1 auto;
 }
 .div_composition_setting button#start_scene {
   margin: 8px 0;
   width: 100%;
   font-size: 16px;
+  flex: 0 1 auto;
 }
 .div_composition_setting .composition_controls {
   display: flex;
@@ -254,12 +258,11 @@ canvas {
 .div_composition_setting button {
   margin: 0px;
   font-size: 1em;
-  flex-grow: 1;
+  flex: 1 0 auto;
 }
 .div_composition_setting #composition_editor {
-  height: 100%;
-  min-height: 200px;
   width: 100%;
   font-size: 10px;
   border: 1px solid #ccc;
+  flex: 1 0 auto;
 }
