--- a/static/chatroom.less
+++ b/static/chatroom.less
@@ -236,13 +236,14 @@ canvas {
         display: inline-block;
         margin: 10px;
         padding: 10px;
-        width: 160px;
+        // width: 160px;
+        vertical-align: middle;
         height: 120px;
         animation: expand 0.5s ease-in-out;
         background: #eee;
         border-radius: 7px;
         img {
-            width:100%; 
+            height:100%; 
         }
         canvas {
             width:100%;
@@ -262,13 +263,17 @@ canvas {
 
 .div_composition_setting {
     flex:1 0 auto;
+    display:flex;
+    flex-direction:column;
     select#select_scenario {
         margin:5px 0 10px 0;
+        flex:0 1 auto;
     }
     button#start_scene {
         margin: 8px 0;
         width: 100%;
         font-size:16px;
+        flex:0 1 auto;
     }
     .composition_controls {
         display:flex;
@@ -279,14 +284,13 @@ canvas {
     button {
         margin: 0px;
         font-size: 1em;
-        flex-grow: 1;
+        flex:1 0 auto;
     }
     #composition_editor {
-        height: 100%;
-        min-height:200px;
         width: 100%;
         font-size: 10px;
         border: 1px solid #ccc;
+        flex:1 0 auto;
     
     }    
 }
