--- a/static/chatroom.less
+++ b/static/chatroom.less
@@ -82,6 +82,18 @@ body {
         width: 100%;
         text-align: center;
     }
+
+    .display-name{
+        position:absolute;
+        top:2px; left:2px;
+        background:rgba(100,100,100,0.4);
+        color: white;
+        font-family:sans-serif;
+        font-size: 14px;
+        font-weight:500;
+        height:20px; width:20px;
+        text-align:center;
+    }
     #local_vid{       
         /* max-height: 140px; */
         width:100%;
@@ -119,16 +131,6 @@ body {
     }
 }
 
-.display-name{
-    position:absolute;
-    top:20px; left:20px;
-    background:rgba(100,100,100,0.4);
-    color: white;
-    font-family:sans-serif;
-    font-size: 14px;
-    font-weight:500;
-    padding: 2px 8px;
-}
 
 #control_box{
     background-color: rgb(255, 255, 255);
@@ -280,12 +282,18 @@ canvas {
         flex-direction:row;
         gap:8px;
         margin-bottom:8px;
+        span.framerate_holder {
+            input {
+                width:50px; height:100%;
+            }
+        }
+        button {
+            margin: 0px;
+            font-size: 1em;
+            flex:1 0 auto;
+        }
     }
-    button {
-        margin: 0px;
-        font-size: 1em;
-        flex:1 0 auto;
-    }
+    
     #composition_editor {
         width: 100%;
         font-size: 10px;
