--- a/templates/chatroom.html
+++ b/templates/chatroom.html
@@ -90,15 +90,19 @@
                     <option value="emotion_tracker">Emotion Tracker</option>
                     <option value="club_virfie">Club Virfie</option>
                 </select>
-                <button id="start_scene" class="btn btn-info" onclick="toggle_video_composition()">Start Video Composition</button>
+                <button id="start_scene" class="btn btn-primary" onclick="toggle_video_composition()">Start Video Composition</button>
                 <div class="composition_controls">
                     <!-- <button class="btn btn-outline-secondary btn-sm" id="revert">Revert</button>
                     <button class="btn btn-outline-secondary btn-sm" id="share">Share</button> -->
+                    <span class="framerate_holder">
+                        <input type='text' id="framerate_input" value="5"/>
+                        fps
+                    </span>
                     <button class="btn btn-outline-secondary btn-sm" id="prevScene">&larr; Prev</button>
                     <button class="btn btn-outline-secondary btn-sm" id="nextScene">&rarr; Next</button>
                 </div>
                 <textarea id="composition_editor"></textarea>
-                <button id="start_scene" class="btn btn-info" onclick="updateConmposition()">Update Video Composition</button>
+                <button id="start_scene" class="btn btn-primary" onclick="updateConmposition()">Update Video Composition</button>
             </div>
         </div>    
         <div id="div_composite_video">
