--- a/static/chatroom.less
+++ b/static/chatroom.less
@@ -299,7 +299,7 @@ canvas {
         font-size: 10px;
         border: 1px solid #ccc;
         flex:1 0 auto;
-    
+        min-height:600px;
     }    
 }
 
